--- a/Mirko_v2/Mirko_v2.WindowsPhone/HashtagSelectionPage.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/HashtagSelectionPage.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="Mirko_v2.HashtagNotificationsPage"
+    x:Class="Mirko_v2.HashtagSelectionPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Mirko_v2"
