Scrolling to appropriate comment from @ notification works gloriously.

--- a/Mirko_v2/Mirko_v2.WindowsPhone/AtNotificationsPage.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/AtNotificationsPage.xaml
@@ -37,6 +37,7 @@
 
             <ListView x:Name="ListView"
                       IsItemClickEnabled="True"
+                      ItemClick="ListView_ItemClick"
                       ItemsSource="{Binding AtNotifications}"
                       ItemContainerStyle="{StaticResource ListViewItemStretchNoTilt}"
                       VirtualizingStackPanel.VirtualizationMode="Recycling">
