--- a/Mirko_v2/Mirko_v2.WindowsPhone/HashtagFlipPage.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/HashtagFlipPage.xaml
@@ -29,13 +29,15 @@
             <controls:HashtagNotificationHeader x:Name="Header" />
         </StackPanel>
 
-        <FlipView Grid.Row="1"
+        <FlipView x:Name="FlipView"
+                  Grid.Row="1"
                   ItemsSource="{Binding HashtagFlipEntries}"
                   SelectedItem="{Binding HashtagFlipCurrentEntry, Mode=TwoWay}">
             
             <i:Interaction.Behaviors>
                 <core:EventTriggerBehavior EventName="SelectionChanged">
-                    <core:InvokeCommandAction Command="{Binding HashtagFlipLoadMore}" />
+                    <core:InvokeCommandAction Command="{Binding HashtagFlipSelectionChanged}"
+                                              CommandParameter="{Binding ElementName=FlipView, Path=SelectedIndex}"/>
                 </core:EventTriggerBehavior>
             </i:Interaction.Behaviors>
             
