Comments in main stream work.

--- a/Mirko_v2/Mirko_v2.WindowsPhone/MainPage.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/MainPage.xaml
@@ -133,11 +133,12 @@
                                      ScrollingUp="ListView_ScrollingUp"
                                      ItemsSource="{Binding MirkoEntries}"
                                      ItemContainerStyle="{StaticResource ListViewItemStretchNoTilt}"
+                                     VirtualizingStackPanel.VirtualizationMode="Recycling"
                                      IsItemClickEnabled="False">
 
                     <ListView.ItemTemplate>
                         <DataTemplate>
-                            <controls:Entry />
+                            <controls:FullEntry />
                         </DataTemplate>
                     </ListView.ItemTemplate>
 
