--- a/Mirko_v2/Mirko_v2.WindowsPhone/Resources/Common.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Resources/Common.xaml
@@ -5,6 +5,6 @@
 
     <x:Double x:Key="AppBarOpacity">0.95</x:Double>
     <x:Double x:Key="AppHeaderOpacity">0.9</x:Double>
-    <vm:FontsViewModel x:Key="FontsSizes" />
+    <SolidColorBrush x:Key="AppHeaderSelectionBrush" Color="#FF5917" />
 
 </ResourceDictionary>
