Move rest of pages into UserControls.

--- a/Mirko_v2/Mirko_v2.WindowsPhone/HostPage.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/HostPage.xaml
@@ -18,7 +18,10 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         
-        <controls:AppHeader Grid.Row="0" />
+        <controls:AppHeader Grid.Row="0"
+                            Canvas.ZIndex="1"
+                            Margin="0,20,0,0"
+                            x:Name="AppHeader"/>
         <Frame Grid.Row="1" 
                x:Name="MainFrame" />
 
