--- a/Mirko_v2/Mirko_v2.WindowsPhone/Pages/AtNotificationsPage.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Pages/AtNotificationsPage.xaml
@@ -1,16 +1,15 @@
-﻿<Page
-    x:Class="Mirko_v2.AtNotificationsPage"
+﻿<UserControl
+    x:Class="Mirko_v2.Pages.AtNotificationsPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Mirko_v2"
+    xmlns:local="using:Mirko_v2.Pages"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:controls="using:Mirko_v2.Controls"
     xmlns:utils="using:Mirko_v2.Utils"
     mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
-    DataContext="{Binding Notifications, Mode=OneWay, Source={StaticResource Locator}}"
-    utils:PageOrientation.SupportedOrientations="Portrait">
+    d:DesignHeight="300"
+    d:DesignWidth="400"
+    DataContext="{Binding Notifications, Mode=OneWay, Source={StaticResource Locator}}">
 
     <Grid x:Name="LayoutRoot"
           Margin="0,25.6,0,0">
@@ -21,14 +20,11 @@
         </Grid.RowDefinitions>
 
         <!-- Title Panel -->
-        <StackPanel Grid.Row="0"
-                    Canvas.ZIndex="1">
-            <controls:AppHeader x:Name="AppHeader"
-                                Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"/>
-            <Rectangle Height="1" 
-                       Fill="{StaticResource PivotHeaderBackground}"
-                       Opacity="{StaticResource AppBarOpacity}" />
-        </StackPanel>
+        <Rectangle Grid.Row="0"
+                   Canvas.ZIndex="1"
+                   Height="1" 
+                   Fill="{StaticResource PivotHeaderBackground}"
+                   Opacity="{StaticResource AppBarOpacity}" />
 
         <!--TODO: Content should be placed within the following grid-->
         <Grid Grid.Row="1" 
@@ -71,15 +67,4 @@
             </ListView>
         </Grid>
     </Grid>
-
-    <Page.BottomAppBar>
-        <CommandBar ClosedDisplayMode="Minimal"
-                    Opacity="{StaticResource AppBarOpacity}">
-            <CommandBar.SecondaryCommands>
-                <AppBarButton Label="usuń wszystkie" 
-                              Command="{Binding DeleteAllAtNotifications}" />
-            </CommandBar.SecondaryCommands>
-        </CommandBar>
-    </Page.BottomAppBar>
-
-</Page>
+</UserControl>
