--- a/Mirko_v2/Mirko_v2.WindowsPhone/Pages/ConversationPage.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Pages/ConversationPage.xaml
@@ -1,8 +1,8 @@
-﻿<Page
-    x:Class="Mirko_v2.ConversationPage"
+﻿<UserControl
+    x:Class="Mirko_v2.Pages.ConversationPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Mirko_v2"
+    xmlns:local="using:Mirko_v2.Pages"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:i="using:Microsoft.Xaml.Interactivity"
@@ -10,11 +10,11 @@
     xmlns:controls="using:Mirko_v2.Controls"
     xmlns:utils="using:Mirko_v2.Utils"
     mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
-    DataContext="{Binding Messages.CurrentConversation, Mode=OneWay, Source={StaticResource Locator}}"
-    utils:PageOrientation.SupportedOrientations="Portrait">
-    
-    <Page.Resources>
+    d:DesignHeight="300"
+    d:DesignWidth="400"
+    DataContext="{Binding Messages.CurrentConversation, Mode=OneWay, Source={StaticResource Locator}}">
+
+    <UserControl.Resources>
         <MenuFlyout x:Name="DeleteAttachmentFlyout">
             <MenuFlyoutItem Text="usuń" Command="{Binding RemoveAttachment}" />
         </MenuFlyout>
@@ -73,7 +73,7 @@
                                        FontSize="15.0"
                                        Margin="12,7,12,7"
                                        Foreground="{ThemeResource SentMessageForeground}"/>
-                        
+
                         <Grid Margin="0,0,0,0"
                               HorizontalAlignment="Stretch"
                               Background="Transparent"
@@ -103,7 +103,7 @@
         <local:PMTemplateSelector x:Key="PMTemplateSelector"
                                   ReceivedTemplate="{StaticResource ReceivedMessage}"
                                   SentTemplate="{StaticResource SentMessage}" />
-    </Page.Resources>
+    </UserControl.Resources>
 
     <Grid x:Name="LayoutRoot"
           Margin="0,25.6,0,0">
@@ -116,7 +116,6 @@
         <!-- Title Panel -->
         <StackPanel Grid.Row="0" 
                     Canvas.ZIndex="1">
-            <controls:AppHeader Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"/>
 
             <Border Background="{ThemeResource PivotHeaderBackground}"
                     Opacity="{StaticResource AppHeaderOpacity}"
@@ -247,25 +246,4 @@
             </ListView>
         </Grid>
     </Grid>
-
-    <Page.BottomAppBar>
-        <CommandBar ClosedDisplayMode="Compact"
-                    Opacity="{StaticResource AppBarOpacity}">
-            <AppBarButton x:Name="SendButton" Icon="Accept" Label="wyślij" IsEnabled="False" Command="{Binding SendMessageCommand}"  />
-            <AppBarButton Label="lenny"
-                          Click="LennyButton_Click">
-                
-                <AppBarButton.Icon>
-                    <BitmapIcon UriSource="ms-appx:///Assets/appbar.smiley.glasses.png" />
-                </AppBarButton.Icon>
-            </AppBarButton>
-            <AppBarButton Icon="Attach" Label="załącznik" Command="{Binding AddAttachment}"  />
-
-            <CommandBar.SecondaryCommands>
-                <AppBarButton x:Name="SettingsButton" 
-                              Label="ustawienia" />
-            </CommandBar.SecondaryCommands>
-        </CommandBar>
-    </Page.BottomAppBar>
-
-</Page>
+</UserControl>
