--- a/Mirko_v2/Mirko_v2.WindowsPhone/Pages/EmbedPage.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Pages/EmbedPage.xaml
@@ -1,16 +1,15 @@
-﻿<Page
-    x:Class="Mirko_v2.EmbedPage"
+﻿<UserControl
+    x:Class="Mirko_v2.Pages.EmbedPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Mirko_v2"
+    xmlns:local="using:Mirko_v2.Pages"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:utils="using:Mirko_v2.Utils"
     xmlns:i="using:Microsoft.Xaml.Interactivity"
     xmlns:core="using:Microsoft.Xaml.Interactions.Core"
     mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
-    utils:PageOrientation.SupportedOrientations="Landscape,LandscapeFlipped,Portrait,PortraitFlipped"
+    d:DesignHeight="300"
+    d:DesignWidth="400"
     DataContext="{Binding Main.SelectedEmbed, Mode=OneWay, Source={StaticResource Locator}}">
 
     <i:Interaction.Behaviors>
@@ -18,14 +17,14 @@
             <core:InvokeCommandAction Command="{Binding LoadImageCommand}" />
         </core:EventTriggerBehavior>
     </i:Interaction.Behaviors>
-    
-    <Page.Resources>
+
+    <UserControl.Resources>
         <MenuFlyout x:Key="SaveFlyout">
             <MenuFlyoutItem Text="zapisz" 
                             Command="{Binding Source={Binding Main.SelectedEmbed, Mode=OneWay, Source={StaticResource Locator}}, 
                                       Path=SaveImageCommand}" />
         </MenuFlyout>
-    </Page.Resources>
+    </UserControl.Resources>
 
     <ScrollViewer x:Name="ImageScrollViewer"
                   SizeChanged="ImageScrollViewer_SizeChanged"
@@ -38,7 +37,7 @@
                   HorizontalContentAlignment="Stretch"
                   ZoomMode="Enabled">
 
-        <Grid IsHoldingEnabled="True">           
+        <Grid IsHoldingEnabled="True">
             <ProgressRing x:Name="Ring"
                           IsActive="True" />
 
@@ -55,4 +54,4 @@
                    Stretch="Uniform" />
         </Grid>
     </ScrollViewer>
-</Page>
+</UserControl>
