--- a/Mirko_v2/Mirko_v2.WindowsPhone/Pages/HashtagNotificationsPage.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Pages/HashtagNotificationsPage.xaml
@@ -1,18 +1,16 @@
-﻿<Page
-    x:Class="Mirko_v2.HashtagNotificationsPage"
+﻿<UserControl
+    x:Class="Mirko_v2.Pages.HashtagNotificationsPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Mirko_v2"
+    xmlns:local="using:Mirko_v2.Pages"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:i="using:Microsoft.Xaml.Interactivity"
-    xmlns:core="using:Microsoft.Xaml.Interactions.Core"
     xmlns:utils="using:Mirko_v2.Utils"
     xmlns:controls="using:Mirko_v2.Controls"
     mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
-    DataContext="{Binding Notifications, Mode=OneWay, Source={StaticResource Locator}}"
-    utils:PageOrientation.SupportedOrientations="Portrait">
+    d:DesignHeight="300"
+    d:DesignWidth="400"
+    DataContext="{Binding Notifications, Mode=OneWay, Source={StaticResource Locator}}">
 
     <Grid x:Name="LayoutRoot"
           Margin="0,25.6,0,0">
@@ -23,14 +21,13 @@
         </Grid.RowDefinitions>
 
         <!-- Title Panel -->
-        <StackPanel Grid.Row="0"
-                    Canvas.ZIndex="1">
-            <controls:AppHeader Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"/>
-            <controls:HashtagNotificationHeader x:Name="Header" />
-        </StackPanel>
+        <controls:HashtagNotificationHeader x:Name="Header"
+                                            Grid.Row="0"
+                                            Canvas.ZIndex="1"/>
 
-        <!--TODO: Content should be placed within the following grid-->
-        <Grid Grid.Row="1" x:Name="ContentRoot" Margin="0,-135,0,-24">
+        <Grid x:Name="ContentRoot" 
+              Grid.Row="1" 
+              Margin="0,-135,0,-24">
             <ListView x:Name="ListView"
                       SelectionMode="None"
                       IsItemClickEnabled="True"
@@ -50,7 +47,7 @@
 
                 <ListView.ItemTemplate>
                     <DataTemplate>
-                        <Grid>                            
+                        <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="Auto" />
                                 <ColumnDefinition Width="*" />
@@ -98,4 +95,4 @@
             </ListView>
         </Grid>
     </Grid>
-</Page>
+</UserControl>
