--- a/Mirko_v2/Mirko_v2.WindowsPhone/Controls/AppHeader.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Controls/AppHeader.xaml
@@ -6,6 +6,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:i="using:Microsoft.Xaml.Interactivity"
     xmlns:core="using:Microsoft.Xaml.Interactions.Core"
+    xmlns:controls="using:Mirko_v2.Controls"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400"
@@ -25,6 +26,7 @@
         
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="*"  />
         </Grid.RowDefinitions>
 
         <Grid x:Name="LogoGrid"
@@ -99,6 +101,86 @@
             
         </Grid>
         
+        <ListBox x:Name="StreamsPanel"
+                 Grid.Column="1"
+                 Grid.Row="0"
+                 Background="Transparent"
+                 HorizontalAlignment="Right"
+                 VerticalAlignment="Center"
+                 ScrollViewer.VerticalScrollBarVisibility="Disabled"
+                 ItemContainerStyle="{StaticResource ListBoxItemStyle}"                     
+                 SelectedIndex="{Binding Source={Binding Main, Mode=OneWay, Source={StaticResource Locator}}, Path=CurrentPivotItem, Mode=TwoWay}"
+                 SelectionChanged="StreamsPanel_SelectionChanged">
+
+            <ListBox.RenderTransform>
+                <TranslateTransform X="0" Y="0" />
+            </ListBox.RenderTransform>
+
+            <ListBox.Resources>
+                <QuadraticEase x:Name="Ease"
+                           EasingMode="EaseIn" />
+                
+                <Storyboard x:Name="EnterStreams"
+                            Completed="EnterStreams_Completed">
+                    <DoubleAnimation Storyboard.TargetName="StreamsPanel"
+                                     Storyboard.TargetProperty="Opacity"
+                                     To="{StaticResource AppHeaderOpacity}"
+                                     EasingFunction="{StaticResource Ease}"
+                                     Duration="0:0:0.5" />
+
+                    <DoubleAnimation Storyboard.TargetName="StreamsPanel"
+                                     Storyboard.TargetProperty="(UIElement.RenderTransform).(TranslateTransform.X)"
+                                     EasingFunction="{StaticResource Ease}"
+                                     From="-80"
+                                     To="0"                                     
+                                     Duration="0:0:0.5" />
+
+                </Storyboard>
+
+                <Storyboard x:Name="LeaveStreams"
+                            Completed="LeaveStreams_Completed">
+                    <DoubleAnimation Storyboard.TargetName="StreamsPanel"
+                                     Storyboard.TargetProperty="Opacity"
+                                     EasingFunction="{StaticResource Ease}"
+                                     To="0.0"
+                                     Duration="0:0:0.5" />
+
+                    <DoubleAnimation Storyboard.TargetName="StreamsPanel"
+                                     Storyboard.TargetProperty="(UIElement.RenderTransform).(TranslateTransform.X)"
+                                     EasingFunction="{StaticResource Ease}"
+                                     From="0"
+                                     To="-80"
+                                     Duration="0:0:0.5" />
+
+
+                </Storyboard>
+            </ListBox.Resources>
+            
+            <ListBox.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <ItemsStackPanel Orientation="Horizontal" />
+                </ItemsPanelTemplate>
+            </ListBox.ItemsPanel>
+            
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding}"
+                               Margin="0,0,10,0"
+                               VerticalAlignment="Center"
+                               Typography.Kerning="True"
+                               FontSize="18"/>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+            
+            <ListBox.Items>
+                <x:String>MIRKO</x:String>
+                <x:String>GORĄCE</x:String>
+                <x:String>ULUBIONE</x:String>
+                <x:String>MÓJ</x:String>
+            </ListBox.Items>
+           
+        </ListBox>
+        
         <StackPanel x:Name="NotificationsPanel"
                     Orientation="Horizontal"
                     Grid.Column="1"
@@ -106,14 +188,47 @@
                     Margin="0,0,0,4"
                     HorizontalAlignment="Right"
                     VerticalAlignment="Center"
+                    Opacity="0.0"
                     Visibility="{Binding Source={StaticResource Locator}, Mode=OneWay, Path=Settings.UserInfo,
-                                 Converter={StaticResource NullToVisibility}}">
+                                 Converter={StaticResource NullToVisibility}}">          
             
             <StackPanel.RenderTransform>
                 <TranslateTransform X="0" Y="0" />
-            </StackPanel.RenderTransform>
+            </StackPanel.RenderTransform>           
             
             <StackPanel.Resources>
+                <QuadraticEase x:Name="NotificationsEase"
+                               EasingMode="EaseIn" />
+
+                <Storyboard x:Name="LeaveNotifications"
+                            Completed="LeaveNotifications_Completed">
+                    <DoubleAnimation Storyboard.TargetName="NotificationsPanel"
+                                     Storyboard.TargetProperty="(UIElement.RenderTransform).(TranslateTransform.X)"
+                                     EasingFunction="{StaticResource NotificationsEase}"
+                                     To="80"
+                                     Duration="0:0:0.5" />
+
+                    <DoubleAnimation Storyboard.TargetName="NotificationsPanel"
+                                     Storyboard.TargetProperty="Opacity"
+                                     To="0.0"
+                                     Duration="0:0:0.5" />
+                </Storyboard>
+
+                <Storyboard x:Name="EnterNotifications"
+                            Completed="EnterNotifications_Completed">
+                    <DoubleAnimation Storyboard.TargetName="NotificationsPanel"
+                                     Storyboard.TargetProperty="(UIElement.RenderTransform).(TranslateTransform.X)"
+                                     EasingFunction="{StaticResource NotificationsEase}"
+                                     From="80"
+                                     To="0"
+                                     Duration="0:0:0.5" />
+
+                    <DoubleAnimation Storyboard.TargetName="NotificationsPanel"
+                                     Storyboard.TargetProperty="Opacity"
+                                     To="1.0"
+                                     Duration="0:0:0.5" />
+                </Storyboard>
+
                 <Storyboard x:Name="NotificationsAnimation">
                     <DoubleAnimation Storyboard.TargetName="NotificationsPanel"
                                      Storyboard.TargetProperty="Opacity"
@@ -190,5 +305,21 @@
             </Grid>
 
         </StackPanel>
+        
+        <Rectangle x:Name="Gradient"
+                   Grid.Row="1"
+                   Height="50"
+                   Grid.ColumnSpan="2">
+
+            <Rectangle.Fill>
+                <LinearGradientBrush StartPoint="0.5, 0"
+                                     EndPoint="0.5, 1">
+                    <GradientStop Color="{Binding ElementName=AppHeaderControl, Path=Background}" Offset="0"/>
+                    <GradientStop Color="Transparent" Offset="1"/>
+                </LinearGradientBrush>
+            </Rectangle.Fill>
+            
+        </Rectangle>
+        
     </Grid>
 </UserControl>
