--- a/Mirko_v2/Mirko_v2.WindowsPhone/HostPage.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/HostPage.xaml
@@ -20,6 +20,8 @@
         
         <controls:AppHeader Grid.Row="0"
                             Canvas.ZIndex="1"
+                            Background="Black"
+                            Opacity="{StaticResource AppHeaderOpacity}"
                             Margin="0,20,0,0"
                             x:Name="AppHeader"/>
         <Frame Grid.Row="1" 
